// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`StatusBadge - Molecule > Visual Consistency > renders consistently for CANCELLED 1`] = `
<span
  class="px-2 py-1 rounded-full text-xs font-medium bg-red-100 text-red-800 dark:bg-red-900/20 dark:text-red-400 "
>
  Cancelada
</span>
`;

exports[`StatusBadge - Molecule > Visual Consistency > renders consistently for COMPLETED 1`] = `
<span
  class="px-2 py-1 rounded-full text-xs font-medium bg-green-100 text-green-800 dark:bg-green-900/20 dark:text-green-400 "
>
  Completada
</span>
`;

exports[`StatusBadge - Molecule > Visual Consistency > renders consistently for ONGOING 1`] = `
<span
  class="px-2 py-1 rounded-full text-xs font-medium bg-blue-100 text-blue-800 dark:bg-blue-900/20 dark:text-blue-400 "
>
  En Proceso
</span>
`;

exports[`StatusBadge - Molecule > Visual Consistency > renders consistently for PENDING 1`] = `
<span
  class="px-2 py-1 rounded-full text-xs font-medium bg-yellow-100 text-yellow-800 dark:bg-yellow-900/20 dark:text-yellow-400 "
>
  Pendiente
</span>
`;
